Created config for forge15 and rapid. Added a cart option.

--- a/configuration/forge15s.html
+++ b/configuration/forge15s.html
@@ -7,7 +7,7 @@
               name="viewport">
         <meta content="ie=edge" http-equiv="X-UA-Compatible">
         <!-- TITLE -->
-        <title>RAPID - Make It Your Own</title>
+        <title>FORGE 15S - Make It Your Own</title>
         <!-- FAVICON -->
         <link href="../assets/favicon/favicon.ico" rel="icon" type="image/x-icon">
         <!-- FONTS -->
@@ -221,12 +221,12 @@
             </div>
             <div id="cart" class="col-md-3">
                 <div class="row justify-content-center align-center">
-                    <img alt="" src="../assets/img/explore/aftershock-rapid.png">
+                    <img alt="" src="../assets/img/index/aftershock-forge15s.png">
                     <h4 class="text-center pt-5 text-uppercase"><strong>Forge 15s</strong></h4>
                     <p class="text-center">
                         Subtotal:
                     </p>
-                    <h4 class="text-primary text-center mb-3" style="line-height: 10px;"><strong>$1034.00</strong></h4>
+                    <h4 id="subtotal" class="text-primary text-center mb-3" style="line-height: 10px;"><strong></strong></h4>
                     <button class="btn btn-primary text-center">Add to Cart</button>
                 </div>
             </div>
@@ -312,6 +312,6 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="../js/jquery-scrolltofixed-min.js"></script>
     <script src="../js/script.js"></script>
-    <script src="../js/configuration.js"></script>
+    <script src="../js/laptop-config.js"></script>
 </body>
 </html>
