--- a/configuration/rapid.html
+++ b/configuration/rapid.html
@@ -42,7 +42,6 @@
                 <ul class="navbar-nav ms-auto text-md-center">
                     <li><a class="nav-link" href="../explore.html">Shop</a></li>
                     <li><a class="nav-link" href="../rewards.html">Rewards</a></li>
-                    <li><a class="nav-link" href="#">About</a></li>
                     <li><a class="nav-link" href="#">Support</a></li>
                     <li class="nav-link" id="account-button"><img alt="" src="../assets/img/index/user-interface.png"
                                                                   style="height: 20px;"></li>
@@ -283,8 +282,8 @@
                     <p class="text-center">
                         Subtotal:
                     </p>
-                    <h4 class="text-primary text-center mb-3" style="line-height: 10px;"><strong>$1034.00</strong></h4>
-                    <button class="btn btn-primary text-center">Add to Cart</button>
+                    <h4 id="subtotal" class="text-primary text-center mb-3" style="line-height: 10px;"><strong></strong></h4>
+                    <button id="addToCartButton" class="btn btn-primary text-center">Add to Cart</button>
                 </div>
             </div>
         </div>
@@ -369,6 +368,6 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="../js/jquery-scrolltofixed-min.js"></script>
     <script src="../js/script.js"></script>
-    <script src="../js/configuration.js"></script>
+    <script src="../js/desktop-config.js"></script>
 </body>
 </html>
