--- a/cart.html
+++ b/cart.html
@@ -46,9 +46,53 @@
         </div>
         <div class="border-bottom"></div>
         <!-- NAVIGATION BAR: END -->
-        
-        <h1 class="text-center mt-5">Cart</h1>
-
+        <!-- CART: START-->
+        <div class="container mb-5">
+            <div class="row justify-content-between">
+                <div class="col-md-6">
+                    <h1 class="text-left mt-5">Cart</h1>
+                    <p>There are no items in your cart.</p>
+                    <div class="container" style="margin-top: -20px;">
+                        <div class="col">
+                            <div class="row-sm ms-4 me-4">
+                                <div class="cart-item">
+                                    
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="row justify-content-center align-center mt-5">
+                        <h4 class="text-left ps-0 mt-5 mb-3"><strong>Order Summary</strong></h4>
+                        <div class="d-flex justify-content-between px-0">
+                            <p class="ps-0">Subtotal</p>
+                            <p class="text-primary pe-0">$1000.00</p>
+                        </div>
+                        <div class="d-flex justify-content-between px-0">
+                            <p class="ps-0">Delivery</p>
+                            <p class="text-primary pe-0">$0.00</p>
+                        </div>
+                        <div class="d-flex justify-content-between px-0 border-top border-bottom mb-3">
+                            <p class="ps-0 my-auto"><strong>Total (includes GST)</strong></p>
+                            <p class="text-primary my-auto pe-0 py-3">$1000.00</p>
+                        </div>
+                        <form class="px-0">
+                            <div class="form-group">
+                              <input type="text" class="form-control" placeholder="Enter Your Promo Code">
+                            </div>
+                        </form>
+                        <button class="btn btn-primary text-center mt-3">
+                            <div class="d-flex justify-content-between px-0">
+                                <p class="ps-0 my-auto"><strong>Check Out</strong></p>
+                                <img src="assets/img/cart/check-out-arrow.svg" width="25px" style="filter: invert(100%);">
+                            </div>
+                        </button> 
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- CART: END -->
         <!-- FOOTER: START -->
         <footer class="bg-dark text-white pt-5 pb-4 mt-auto">
             <div class="container text-md-start">
