--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
                     <li><a href="explore.html" class="nav-link">Shop</a></li>
                     <li><a href="rewards.html" class="nav-link">Rewards</a></li>
                     <li><a href="support.html" class="nav-link">Support</a></li>
+                    <li><a href="cart.html" class="nav-link">Cart(0)</a></li>
                     <li id="account-button" class="nav-link"><img src="assets/img/index/user-interface.png" alt="" style="height: 20px;"></li>
                 </ul>
             </div>
