Changes to cart. Additional minor changes to other files.

--- a/configuration/forge15s.html
+++ b/configuration/forge15s.html
@@ -227,7 +227,7 @@
                         Subtotal:
                     </p>
                     <h4 id="subtotal" class="text-primary text-center mb-3" style="line-height: 10px;"><strong></strong></h4>
-                    <button class="btn btn-primary text-center">Add to Cart</button>
+                    <button id="addToCartButton" class="btn btn-primary text-center">Add to Cart</button>
                 </div>
             </div>
         </div>
