--- a/termsofservice.html
+++ b/termsofservice.html
@@ -40,8 +40,8 @@
                 <ul class="navbar-nav ms-auto text-md-center">
                     <li><a href="explore.html" class="nav-link">Shop</a></li>
                     <li><a href="rewards.html" class="nav-link">Rewards</a></li>
-                    <li><a href="#" class="nav-link">About</a></li>
-                    <li><a href="#" class="nav-link">Support</a></li>
+                    <li><a href="support.html" class="nav-link">Support</a></li>
+                    <li><a href="cart.html" class="nav-link" id="cart-qty">Cart(0)</a></li>
                     <li id="account-button" class="nav-link"><img src="assets/img/index/user-interface.png" alt="" style="height: 20px;"></li>
                 </ul>
             </div>
@@ -187,9 +187,8 @@
                 <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
                     <h5 class="mb-4 font-weight-bold">NAVIGATION</h5>
                     <p><a href="explore.html" class="text-white text-decoration-none">Shop</a></p>
-                    <p><a href="#" class="text-white text-decoration-none">Rewards</a></p>
-                    <p><a href="#" class="text-white text-decoration-none">About</a></p>
-                    <p><a href="#" class="text-white text-decoration-none">Support</a></p>
+                    <p><a href="rewards.html" class="text-white text-decoration-none">Rewards</a></p>
+                    <p><a href="support.html" class="text-white text-decoration-none">Support</a></p>
                 </div>
                 <div class="col-md-5 col-lg-5 col-xl-3 mx-auto mt-3">
                     <h5 class="mb-4 ">CONTACT US</h5>
