--- a/cart.html
+++ b/cart.html
@@ -1,170 +1,171 @@
 <!doctype html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-        <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <!-- TITLE -->
-        <title>COMZONE - Singapore's #1 Customisable High Performance PC Builders</title>
-        <!-- FAVICON -->
-        <link rel="icon" type="image/x-icon" href="assets/favicon/favicon.ico">
-        <!-- FONTS -->
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
-        <!-- CSS -->
-        <link rel="stylesheet" href="css/normalize.css">
-        <link rel="stylesheet" href="css/style.css">
-        <link rel="stylesheet" href="css/spinner.css">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    </head>
-    <body class="d-flex flex-column min-vh-100">
-        <!-- NAVIGATION BAR: START -->
-        <div class="container">
-            <nav class="navbar navbar-expand-sm navbar-light py-2">
-                <a href="index.html" class="navbar-brand"><strong>COM</strong>ZONE</a> <!-- BRAND LOGO -->
-                <button
-                    class="navbar-toggler"
-                    type="button"
-                    data-bs-toggle="collapse"
-                    data-bs-target="#toggleMobileMenu"
-                    aria-controls="toggleMobileMenu"
-                    aria-expanded="false"
-                    aria-label="Toggle navigation"
-                    >
-                <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="toggleMobileMenu">
-                    <ul class="navbar-nav ms-auto text-md-center">
-                        <li><a href="explore.html" class="nav-link">Shop</a></li>
-                        <li><a href="rewards.html" class="nav-link">Rewards</a></li>
-                        <li><a href="support.html" class="nav-link">Support</a></li>
-                        <li id="account-button" class="nav-link"><img src="assets/img/index/user-interface.png" alt="" style="height: 20px;"></li>
-                    </ul>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <!-- TITLE -->
+    <title>COMZONE - Singapore's #1 Customisable High Performance PC Builders</title>
+    <!-- FAVICON -->
+    <link rel="icon" type="image/x-icon" href="assets/favicon/favicon.ico">
+    <!-- FONTS -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+    <!-- CSS -->
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/spinner.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+</head>
+<body class="d-flex flex-column min-vh-100">
+    <!-- NAVIGATION BAR: START -->
+    <div class="container">
+        <nav class="navbar navbar-expand-sm navbar-light py-2">
+            <a href="index.html" class="navbar-brand"><strong>COM</strong>ZONE</a> <!-- BRAND LOGO -->
+            <button
+                class="navbar-toggler"
+                type="button"
+                data-bs-toggle="collapse"
+                data-bs-target="#toggleMobileMenu"
+                aria-controls="toggleMobileMenu"
+                aria-expanded="false"
+                aria-label="Toggle navigation"
+                >
+            <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="toggleMobileMenu">
+                <ul class="navbar-nav ms-auto text-md-center">
+                    <li><a href="explore.html" class="nav-link">Shop</a></li>
+                    <li><a href="rewards.html" class="nav-link">Rewards</a></li>
+                    <li><a href="support.html" class="nav-link">Support</a></li>
+                    <li id="account-button" class="nav-link"><img src="assets/img/index/user-interface.png" alt="" style="height: 20px;"></li>
+                </ul>
+            </div>
+        </nav>
+    </div>
+    <div class="border-bottom"></div>
+
+    <!-- NAVIGATION BAR: END -->
+    <!-- CART: START-->
+    <div class="container mb-5">
+        <div class="row justify-content-between">
+            <div class="col-md-8">
+                <h1 class="text-left mt-5">Cart</h1>
+                <div class="container" style="margin-top: -10px;">
+                    <table class="table" id="cart-table">
+                        <thead>
+                        <th>Item</th>
+                        <th>Qty</th>
+                        <th>Price</th>
+                        </thead>
+                        <col span="1" style="width: 500px;">
+                        <tbody></tbody>
+                    </table>
                 </div>
-            </nav>
+            </div>
+            <div class="col-md-4">
+                <div class="row justify-content-center align-center mt-5">
+                    <h4 class="text-left ps-0 mt-5 mb-3"><strong>Order Summary</strong></h4>
+                    <div class="d-flex justify-content-between px-0">
+                        <p class="ps-0">Subtotal</p>
+                        <p id="cart-subtotal" class="text-primary pe-0"></p>
+                    </div>
+                    <div class="d-flex justify-content-between px-0">
+                        <p class="ps-0">Delivery</p>
+                        <p class="text-primary pe-0">$0.00</p>
+                    </div>
+                    <div class="d-flex justify-content-between px-0 border-top border-bottom mb-3">
+                        <p class="ps-0 my-auto"><strong>Total (includes GST)</strong></p>
+                        <p id="cart-total" class="text-primary my-auto pe-0 py-3"></p>
+                    </div>
+                    <form class="px-0">
+                        <div class="form-group">
+                            <input type="text" class="form-control" placeholder="Enter Your Promo Code">
+                        </div>
+                    </form>
+                    <button class="btn btn-primary text-center mt-3">
+                        <div class="d-flex justify-content-between px-0">
+                            <p class="ps-0 my-auto"><strong>Check Out</strong></p>
+                            <img src="assets/img/cart/check-out-arrow.svg" width="25px" style="filter: invert(100%);">
+                        </div>
+                    </button>
+                </div>
+            </div>
         </div>
-        <div class="border-bottom"></div>
-        <!-- NAVIGATION BAR: END -->
-        <!-- CART: START-->
-        <div class="container mb-5">
-            <div class="row justify-content-between">
+    </div>
+    <!-- CART: END -->
+
+    <!-- FOOTER: START -->
+    <footer class="bg-dark text-white pt-5 pb-4 mt-auto">
+        <div class="container text-md-start">
+            <div class="row text-md-start">
+                <div class="col-md-3 col-lg-3 col-xl-5 mx-auto mt-3 ms-0">
+                    <h5 class="mb-4 font-weight-bold"><strong>COM</strong>ZONE</h5>
+                    <p>
+                        Singapore's #1 Customisable High Performance PC Builders.
+                    </p>
+                    <img class="me-4" height="80px" width="80px" src="assets/img/index/best-badge.png" alt="">
+                    <img height="80px" width="80px" src="assets/img/index/certified-badge.png" alt="">
+                </div>
+                <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
+                    <h5 class="mb-4 font-weight-bold">NAVIGATION</h5>
+                    <p><a href="explore.html" class="text-white text-decoration-none">Shop</a></p>
+                    <p><a href="rewards.html" class="text-white text-decoration-none">Rewards</a></p>
+                    <p><a href="support.html" class="text-white text-decoration-none">Support</a></p>
+                </div>
+                <div class="col-md-5 col-lg-5 col-xl-3 mx-auto mt-3">
+                    <h5 class="mb-4 ">CONTACT US</h5>
+                    <p>
+                        Blk 31, Ngee Ann Polytechnic <br>
+                        535 Clementi Rd, Singapore 599489
+                    </p>
+                    <p><a href="mailto:fake_contact@comzone.sg" class="text-white text-decoration-none">Email: fake_contact@comzone.sg</a></p>
+                    <div class="d-flex">
+                        <ul class="social-icon-ul ps-0">
+                            <li><span class="social-icon social-facebook"><i class="fab fa-facebook"></i></span></li>
+                            <li><span class="social-icon social-google"><i class="fab fa-google"></i></span></li>
+                            <li><span class="social-icon social-linkedin"><i class="fab fa-linkedin"></i></span></li>
+                            <li><span class="social-icon social-instagram"><i class="fab fa-instagram"></i></span></li>
+                            <li><span class="social-icon social-twitter"><i class="fab fa-twitter"></i></span></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <hr class="mb-4">
+            <div class="row align-items-center">
                 <div class="col-md-6">
-                    <h1 class="text-left mt-5">Cart</h1>
-                    <p>There are no items in your cart.</p>
-                    <div class="container" style="margin-top: -20px;">
-                        <div class="col">
-                            <div class="row-sm ms-4 me-4">
-                                <div class="cart-item">
-                                    
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                    <span>&copy; 2022 COMZONE. All Rights Reserved.<br></span>
+                    <span style="font-size: 12px;">DESIGNED BY <a href="https://www.github.com/gg2shadow" class="text-decoration-none">XIAO YAOJIE</a> &
+                    <a href="https://www.github.com/iirquhs-np" class="text-decoration-none">SHUQRI SHAIFUDDIN</a></span>
                 </div>
-                <div class="col-md-4">
-                    <div class="row justify-content-center align-center mt-5">
-                        <h4 class="text-left ps-0 mt-5 mb-3"><strong>Order Summary</strong></h4>
-                        <div class="d-flex justify-content-between px-0">
-                            <p class="ps-0">Subtotal</p>
-                            <p class="text-primary pe-0">$1000.00</p>
-                        </div>
-                        <div class="d-flex justify-content-between px-0">
-                            <p class="ps-0">Delivery</p>
-                            <p class="text-primary pe-0">$0.00</p>
-                        </div>
-                        <div class="d-flex justify-content-between px-0 border-top border-bottom mb-3">
-                            <p class="ps-0 my-auto"><strong>Total (includes GST)</strong></p>
-                            <p class="text-primary my-auto pe-0 py-3">$1000.00</p>
-                        </div>
-                        <form class="px-0">
-                            <div class="form-group">
-                              <input type="text" class="form-control" placeholder="Enter Your Promo Code">
-                            </div>
-                        </form>
-                        <button class="btn btn-primary text-center mt-3">
-                            <div class="d-flex justify-content-between px-0">
-                                <p class="ps-0 my-auto"><strong>Check Out</strong></p>
-                                <img src="assets/img/cart/check-out-arrow.svg" width="25px" style="filter: invert(100%);">
-                            </div>
-                        </button> 
+                <div class="col-md-6 mt-3">
+                    <div class="text-start text-md-end">
+                        <span>
+                        <a href="termsofservice.html" class="text-white text-decoration-none">Terms of Service</a> |
+                        <a href="datanotice.html" class="text-white text-decoration-none">Data Protection Notice</a>
+                        </span>
                     </div>
                 </div>
             </div>
         </div>
-        <!-- CART: END -->
-        <!-- FOOTER: START -->
-        <footer class="bg-dark text-white pt-5 pb-4 mt-auto">
-            <div class="container text-md-start">
-                <div class="row text-md-start">
-                    <div class="col-md-3 col-lg-3 col-xl-5 mx-auto mt-3 ms-0">
-                        <h5 class="mb-4 font-weight-bold"><strong>COM</strong>ZONE</h5>
-                        <p>
-                            Singapore's #1 Customisable High Performance PC Builders.
-                        </p>
-                        <img class="me-4" height="80px" width="80px" src="assets/img/index/best-badge.png" alt="">
-                        <img height="80px" width="80px" src="assets/img/index/certified-badge.png" alt="">
-                    </div>
-                    <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
-                        <h5 class="mb-4 font-weight-bold">NAVIGATION</h5>
-                        <p><a href="explore.html" class="text-white text-decoration-none">Shop</a></p>
-                        <p><a href="#" class="text-white text-decoration-none">Rewards</a></p>
-                        <p><a href="#" class="text-white text-decoration-none">About</a></p>
-                        <p><a href="#" class="text-white text-decoration-none">Support</a></p>
-                    </div>
-                    <div class="col-md-5 col-lg-5 col-xl-3 mx-auto mt-3">
-                        <h5 class="mb-4 ">CONTACT US</h5>
-                        <p>
-                            Blk 31, Ngee Ann Polytechnic <br>
-                            535 Clementi Rd, Singapore 599489
-                        </p>
-                        <p><a href="mailto:fake_contact@comzone.sg" class="text-white text-decoration-none">Email: fake_contact@comzone.sg</a></p>
-                        <div class="d-flex">
-                            <ul class="social-icon-ul ps-0">
-                                <li><span class="social-icon social-facebook"><i class="fab fa-facebook"></i></span></li>
-                                <li><span class="social-icon social-google"><i class="fab fa-google"></i></span></li>
-                                <li><span class="social-icon social-linkedin"><i class="fab fa-linkedin"></i></span></li>
-                                <li><span class="social-icon social-instagram"><i class="fab fa-instagram"></i></span></li>
-                                <li><span class="social-icon social-twitter"><i class="fab fa-twitter"></i></span></li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-                <hr class="mb-4">
-                <div class="row align-items-center">
-                    <div class="col-md-6">
-                        <span>&copy; 2022 COMZONE. All Rights Reserved.<br></span>
-                        <span style="font-size: 12px;">DESIGNED BY <a href="https://www.github.com/gg2shadow" class="text-decoration-none">XIAO YAOJIE</a> &
-                        <a href="https://www.github.com/iirquhs-np" class="text-decoration-none">SHUQRI SHAIFUDDIN</a></span>
-                    </div>
-                    <div class="col-md-6 mt-3">
-                        <div class="text-start text-md-end">
-                            <span>
-                            <a href="termsofservice.html" class="text-white text-decoration-none">Terms of Service</a> |
-                            <a href="datanotice.html" class="text-white text-decoration-none">Data Protection Notice</a>
-                            </span>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </footer>
-        <!-- FOOTER: END -->
-        <!-- BACK TO TOP BUTTON: START -->
-        <button
-            type="button"
-            class="btn btn-danger btn-floating btn-lg"
-            id="btn-back-to-top"
-            >
-        <i class="fas fa-arrow-up"></i>
-        </button>
-        <!-- BACK TO TOP BUTTON: END -->
-        <!-- JS -->
-        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
-        <script defer src="https://use.fontawesome.com/releases/v5.15.4/js/all.js" integrity="sha384-rOA1PnstxnOBLzCLMcre8ybwbTmemjzdNlILg8O7z1lUkLXozs4DHonlDtnE7fpc" crossorigin="anonymous"></script>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-        <script src="js/script.js"></script>
-        <script src="js/contact.js"></script>
-        <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
-    </body>
+    </footer>
+    <!-- FOOTER: END -->
+    <!-- BACK TO TOP BUTTON: START -->
+    <button
+        type="button"
+        class="btn btn-danger btn-floating btn-lg"
+        id="btn-back-to-top"
+        >
+    <i class="fas fa-arrow-up"></i>
+    </button>
+    <!-- BACK TO TOP BUTTON: END -->
+    <!-- JS -->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+    <script defer src="https://use.fontawesome.com/releases/v5.15.4/js/all.js" integrity="sha384-rOA1PnstxnOBLzCLMcre8ybwbTmemjzdNlILg8O7z1lUkLXozs4DHonlDtnE7fpc" crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="js/script.js"></script>
+    <script src="js/cart.js"></script>
+</body>
 </html>
