--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     <li><a href="explore.html" class="nav-link">Shop</a></li>
                     <li><a href="rewards.html" class="nav-link">Rewards</a></li>
                     <li><a href="support.html" class="nav-link">Support</a></li>
-                    <li><a href="cart.html" class="nav-link">Cart(0)</a></li>
+                    <li><a href="cart.html" class="nav-link" id="cart-qty">Cart(0)</a></li>
                     <li id="account-button" class="nav-link"><img src="assets/img/index/user-interface.png" alt="" style="height: 20px;"></li>
                 </ul>
             </div>
@@ -460,9 +460,8 @@
                 <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
                     <h5 class="mb-4 font-weight-bold">NAVIGATION</h5>
                     <p><a href="explore.html" class="text-white text-decoration-none">Shop</a></p>
-                    <p><a href="#" class="text-white text-decoration-none">Rewards</a></p>
-                    <p><a href="#" class="text-white text-decoration-none">About</a></p>
-                    <p><a href="#" class="text-white text-decoration-none">Support</a></p>
+                    <p><a href="rewards.html" class="text-white text-decoration-none">Rewards</a></p>
+                    <p><a href="support.html" class="text-white text-decoration-none">Support</a></p>
                 </div>
                 <div class="col-md-5 col-lg-5 col-xl-3 mx-auto mt-3">
                     <h5 class="mb-4 ">CONTACT US</h5>
@@ -520,6 +519,6 @@
     <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="js/script.js"></script>
-    <script src="js/contact.js"></script>
+    <script src="js/laptop-config.js"></script>
 </body>
 </html>
