--- a/cart.html
+++ b/cart.html
@@ -69,7 +69,7 @@
                     <h4 class="text-left ps-0 mt-5 mb-3"><strong>Order Summary</strong></h4>
                     <div class="d-flex justify-content-between px-0">
                         <p class="ps-0">Subtotal</p>
-                        <p id="cart-subtotal" class="text-primary pe-0"></p>
+                        <p id="cart-subtotal" class="text-primary pe-0">$0.00</p>
                     </div>
                     <div class="d-flex justify-content-between px-0">
                         <p class="ps-0">Delivery</p>
@@ -77,7 +77,7 @@
                     </div>
                     <div class="d-flex justify-content-between px-0 border-top border-bottom mb-3">
                         <p class="ps-0 my-auto"><strong>Total (includes GST)</strong></p>
-                        <p id="cart-total" class="text-primary my-auto pe-0 py-3"></p>
+                        <p id="cart-total" class="text-primary my-auto pe-0 py-3">$0.00</p>
                     </div>
                     <form class="px-0">
                         <div class="form-group">
