--- a/explore.html
+++ b/explore.html
@@ -335,6 +335,7 @@
                     <img height="80px" width="80px" src="assets/img/index/certified-badge.png" alt="">
                 </div>
                 <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
+                    <h5 class="mb-4 font-weight-bold">NAVIGATION</h5>
                     <p><a href="explore.html" class="text-white text-decoration-none">Shop</a></p>
                     <p><a href="rewards.html" class="text-white text-decoration-none">Rewards</a></p>
                     <p><a href="support.html" class="text-white text-decoration-none">Support</a></p>
