fixed cart. + other minor changes.

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
         <h2 class="mt-5 pt-5 text-center">What Happens After Checking Out At COMZONE?</h2>
         <h5 class="text-center text-secondary m-4">Ordered &#187; Built &#187; Tested &#187; Packed &#187; Ready To Ship</h5>
         <div class="embed-responsive embed-responsive-16by9 pb-4">
-            <iframe class="mx-auto d-block mb-5" width="560" height="315" src="https://www.youtube.com/embed/Va18zfmeaD4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe style="max-width: 80%" class="mx-auto d-block mb-5" width="560" height="315" src="https://www.youtube.com/embed/Va18zfmeaD4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
     </div>
     <!-- VIDEO PLAYER SECTION: END -->
@@ -282,9 +282,6 @@
                 <h2 class="text-center mt-3">Contact Us</h2>
                 <p class="text-center">We respond within 3 business days.</p>
                 <div class="screen-body">
-                    <div class="screen-body-item left pt-2">
-                        <lottie-player src="https://assets2.lottiefiles.com/packages/lf20_fn2gqs3b.json"  background="transparent" speed="1" style="width: 300px; height: 300px;" loop autoplay></lottie-player>
-                    </div>
                     <div class="screen-body-item pt-2">
                         <form id="contact-form">
                             <div class="app-form">
