--- a/cart.html
+++ b/cart.html
@@ -52,28 +52,25 @@
         <div class="row justify-content-between">
             <div class="col-md-9">
                 <h1 class="text-left mt-5">Cart</h1>
+                <p id="cart-empty-text" style="display: none;">Your cart is empty.</p>
                 <div class="container" style="margin-top: -10px;">
-                    <table class="table" id="cart-table">
+                    <table class="table" id="cart-table" style="display: none;">
                         <thead>
                         <th>Item</th>
                         <th>Qty</th>
                         <th>Price</th>
                         </thead>
-                        <col span="1" style="width: 750px;">
+                        <col span="1" style="width: 500px;">
                         <tbody></tbody>
                     </table>
                 </div>
             </div>
             <div class="col-md-3">
-                <div class="row justify-content-center align-center mt-5">
+                <div class="row justify-content-center align-center mt-5 mx-auto">
                     <h4 class="text-left ps-0 mt-5 mb-3"><strong>Order Summary</strong></h4>
                     <div class="d-flex justify-content-between px-0">
                         <p class="ps-0">Subtotal</p>
                         <p id="cart-subtotal" class="text-primary pe-0">$0.00</p>
-                    </div>
-                    <div class="d-flex justify-content-between px-0">
-                        <p class="ps-0">Delivery</p>
-                        <p class="text-primary pe-0">$0.00</p>
                     </div>
                     <div class="d-flex justify-content-between px-0 border-top border-bottom mb-3">
                         <p class="ps-0 my-auto"><strong>Total (includes GST)</strong></p>
