--- a/configuration/forge15s.html
+++ b/configuration/forge15s.html
@@ -56,7 +56,7 @@
     <!-- CONFIGURATION: START -->
     <h1 class="text-center mt-5">Make It Your Own</h1>
     <div class="row justify-content-center">
-        <div id="spinner" class="spinner-border" role="status">
+        <div id="spinner" class="spinner-border mb-5" role="status">
             <span class="visually-hidden">Loading...</span>
         </div>
     </div>
