Finalised index.html and explore.html

--- a/checkout.html
+++ b/checkout.html
@@ -125,7 +125,7 @@
                                                     <div class="d-block">
                                                         <p class="mb-1">Delivery Method</p>
                                                         <div class="custom-control custom-radio">
-                                                          <input id="credit" name="deliveryMethod" type="radio" class="custom-control-input" checked required>
+                                                          <input id="credit" name="deliveryMethod" type="radio" class="custom-control-input" required>
                                                           <label class="custom-control-label" for="credit">In-store pick up @ COMZONE service center</label>
                                                         </div>
                                                         <div class="custom-control custom-radio">
