--- a/support.html
+++ b/support.html
@@ -200,20 +200,20 @@
                             <form id="contact-form">
                                 <div class="app-form">
                                     <div class="app-form-group">
-                                        <input id="contact--name" class="app-form-control" placeholder="NAME" type="text">
+                                        <input id="contact-name" class="app-form-control" placeholder="NAME" type="text">
                                     </div>
                                     <div class="app-form-group">
-                                        <input id="contact--email" class="app-form-control" placeholder="EMAIL" type="email">
+                                        <input id="contact-email" class="app-form-control" placeholder="EMAIL" type="email">
                                     </div>
                                     <div class="app-form-group">
-                                        <input id="contact--contactNo" class="app-form-control" placeholder="CONTACT NO" type="number">
+                                        <input id="contact-contact-no" class="app-form-control" placeholder="CONTACT NO" type="number">
                                     </div>
                                     <div class="app-form-group message">
-                                        <input id="contact--message" class="app-form-control" placeholder="MESSAGE" type="text">
+                                        <input id="contact-message" class="app-form-control" placeholder="MESSAGE" type="text">
                                     </div>
                                     <div class="app-form-group buttons">
-                                        <button id="contact--cancel" class="app-form-button" type="reset">CANCEL</button>
-                                        <button id="contact--send" class="app-form-button" type="submit">SEND</button>
+                                        <button id="contact-cancel" class="app-form-button" type="reset">CANCEL</button>
+                                        <button id="contact-send" class="app-form-button" type="submit">SEND</button>
                                     </div>
                                 </div>
                             </form>
