Updated explore.html, rewards.html, support.html, as well as README.md

--- a/explore.html
+++ b/explore.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
     <!-- TITLE -->
-    <title>COMZONE - Singapore's #1 Customisable High Performance PC Builders</title>
+    <title>COMZONE - Find Your System</title>
 
     <!-- FAVICON -->
     <link rel="icon" type="image/x-icon" href="assets/favicon/favicon.ico">
@@ -73,7 +73,7 @@
         <div class="container mt-5 mb-3 my-lg-5">
             <div class="container">
                 <!-- DESKTOPS -->
-                <h2 id="desktops" class="text-center pt-0 pt-lg-5"><strong>DESKTOPS</strong></h2>
+                <h2 id="desktops" class="text-center pt-2 pt-lg-5"><strong>DESKTOPS</strong></h2>
                 <h5 class="text-center">EXTREME PERFORMANCE | OPEN LOOP COOLING READY | BEAUTIFUL SHOWCASE DESIGN | ATX</h5>
                 <p class="text-center px-2 px-lg-5 mb-0">
                    Our premium advanced range of custom pcs feature a full range of ultra-high end component options,  
@@ -207,7 +207,7 @@
                     </div>
                 </div>
                 <!-- LAPTOPS -->
-                <h2 id="laptops" class="text-center pt-0 pt-lg-5"><strong>LAPTOPS</strong></h2>
+                <h2 id="laptops" class="text-center pt-2 pt-lg-5"><strong>LAPTOPS</strong></h2>
                 <h5 class="text-center">ULTRA LONG BATTERY LIFE | SUPERSLIM | RTX 30 SERIES</h5>
                 <p class="text-center px-2 px-lg-5 mb-0">
                     COMZONE Optimal series gaming notebooks aim to deliver the ultimate combination of features and performance at unbeatable pricepoints. 
@@ -241,7 +241,7 @@
                                 <h4 class="ps-2 text-primary"><strong>$1425</emphasis></strong></h4>
                             </div>
                             <a href="#" class="btn btn-primary product-card-btn">Add to Cart</a>
-                            <a href="configuration/forge15s.html product-card-btn" class="btn btn-secondary">Customise</a>
+                            <a href="configuration/forge15s.html" class="btn btn-secondary product-card-btn">Customise</a>
                         </div>
                     </div>
                     <!-- ZEAL SYSTEM -->
