--- a/cart.html
+++ b/cart.html
@@ -72,6 +72,10 @@
                         <p class="ps-0">Subtotal</p>
                         <p id="cart-subtotal" class="text-primary pe-0">$0.00</p>
                     </div>
+                    <div class="d-flex justify-content-between px-0">
+                        <p class="ps-0">Delivery</p>
+                        <p id="cart-subtotal" class="text-primary pe-0">Calculated at next step.</p>
+                    </div>
                     <div class="d-flex justify-content-between px-0 border-top border-bottom mb-3">
                         <p class="ps-0 my-auto"><strong>Total (includes GST)</strong></p>
                         <p id="cart-total" class="text-primary my-auto pe-0 py-3">$0.00</p>
