--- a/rewards.html
+++ b/rewards.html
@@ -1,12 +1,13 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- META -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
     <!-- TITLE -->
-    <title>COMZONE - Singapore's #1 Customisable High Performance PC Builders</title>
+    <title>COMZONE - Win Big This CNY</title>
 
     <!-- FAVICON -->
     <link rel="icon" type="image/x-icon" href="assets/favicon/favicon.ico">
@@ -19,15 +20,16 @@
     <!-- CSS -->
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/spinner.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
 </head>
+
 <body class="d-flex flex-column min-vh-100">
     <!-- NAVIGATION BAR: START -->
     <div class="container">
         <nav class="navbar navbar-expand-sm navbar-light py-2">
-            <a href="index.html" class="navbar-brand"><strong>COM</strong>ZONE</a> <!-- BRAND LOGO -->
+            <!-- Company Logo -->
+            <a href="index.html" class="navbar-brand"><strong>COM</strong>ZONE</a>
+            <!-- Mobile Hamburger Menu -->
             <button
                     class="navbar-toggler"
                     type="button"
@@ -40,6 +42,7 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="toggleMobileMenu">
+                <!-- Nav Bar Links -->
                 <ul class="navbar-nav ms-auto text-md-center">
                     <li><a href="explore.html" class="nav-link">Shop</a></li>
                     <li><a href="rewards.html" class="nav-link">Rewards</a></li>
@@ -50,16 +53,13 @@
             </div>
         </nav>
     </div>
+    <!-- Nav Bar Bottom Border -->
     <div class="border-bottom"></div>
     <!-- NAVIGATION BAR: END -->
 
     <!-- LOYALTY PROGRAM: START -->
-    <h1 class="text-center mt-5">Hu Else - Earn Your Way To The Top</h1>
-    <div style="display: flex; justify-content: center; align-items: center;">
-        <p>Top three walks away with cash prizes worth up to</p>
-        <p class="ps-2 pe-2 text-danger"><strong>$8,888</emphasis></strong></p>
-        <p>this CNY season!</p>
-    </div>
+    <h1 class="text-center mx-4 mx-lg-0 mt-5">Hu Else - Earn Your Way To The Top</h1>
+    <p class="text-center mx-4 mx-lg-0">Top three walks away with cash prizes worth up to <span class="text-danger"><strong>$8,888</strong></span> this CNY season!</p>
     <p class="text-center">15 Jan 2022 - 15 Feb 2022</p>
 
     <lottie-player class="mx-auto d-block" src="https://assets7.lottiefiles.com/packages/lf20_vvpxhboz.json"  background="transparent"  speed="1"  style="width: 150px; height: 150px;"  loop autoplay></lottie-player>
@@ -70,32 +70,32 @@
             <div class="row-sm ms-4 me-4">
                 <div class="container my-5">
                     <div class="row">
-                        <div class="col-sm-2 ms-4 me-4">
+                        <div class="col-sm-2 mx-0 mx-lg-4">
                             <p class="rewards-steps-icon">1</p>
                         </div>
-                        <div class="col-sm-8 ms-4 me-4 my-auto">
-                            <h5 class="text-left text-uppercase"><strong>Earn Points By Spending</strong></h5>
-                            <p class="text-left">
+                        <div class="col-sm-8 mx-0 mx-lg-4 my-auto">
+                            <h5 class="text-left text-uppercase rewards-steps"><strong>Earn Points By Spending</strong></h5>
+                            <p class="text-left rewards-steps">
                                 You receive 1 Ang Bao <img src="assets/img/rewards/ang-bao.png" width="35px" height="35px"> for every $5 you spend. 
                                 The more you spend, the more you earn.
                             </p>
                         </div>
-                        <div class="col-sm-2 ms-4 me-4">
+                        <div class="col-sm-2 mx-0 mx-lg-4">
                             <p class="rewards-steps-icon">2</p>
                         </div>
-                        <div class="col-sm-8 ms-4 me-4 my-auto">
-                            <h5 class="text-left text-uppercase"><strong>Trade Ang Baos For Rewards</strong></h5>
-                            <p class="text-left">
+                        <div class="col-sm-8 mx-0 mx-lg-4 my-auto">
+                            <h5 class="text-left text-uppercase rewards-steps"><strong>Trade Ang Baos For Rewards</strong></h5>
+                            <p class="text-left rewards-steps">
                                 You can use the Ang Baos <img src="assets/img/rewards/ang-bao.png" width="35px" height="35px"> you have to redeem rewards 
                                 such as discount vouchers, free shipping and more!
                             </p>
                         </div>
-                        <div class="col-sm-2 ms-4 me-4">
+                        <div class="col-sm-2 mx-0 mx-lg-4">
                             <p class="rewards-steps-icon">3</p>
                         </div>
-                        <div class="col-sm-8 ms-4 me-4 my-auto">
-                            <h5 class="text-left text-uppercase"><strong>Earn Your Way Up The Leaderboard</strong></h5>
-                            <p class="text-left">
+                        <div class="col-sm-8 mx-0 mx-lg-4 my-auto">
+                            <h5 class="text-left text-uppercase rewards-steps"><strong>Earn Your Way Up The Leaderboard</strong></h5>
+                            <p class="text-left rewards-steps">
                                 You will be ranked based on your Ang Bao <img src="assets/img/rewards/ang-bao.png" width="35px" height="35px"> count.
                                 The top 3 winners walk away with $8,888, $888 and $88 respectively.
                             </p>
@@ -106,20 +106,20 @@
         </div>
     </div>
     <!-- HOW IT WORKS SECTION: END -->
-    <div style="display: flex; justify-content: center; align-items: center;" class="mb-4">
+    <div style="display: flex; justify-content: center; align-items: center;" class="mb-4 rewards-notes">
         <p>
             Note:
             <br>
-            You need to be a member to participate in this event. Sign up <a href="register.html">here</a>.
+            You need to be a member to participate in this event. 
             <br>
-            Already a member? <a href="register.html">Login</a>.</p>
+            <a href="register.html">Sign up</a> | <a href="register.html">Login</a></p>
     </div>
     <!-- LOYALTY PROGRAM: END -->
 
     <hr class="w-50 mx-auto d-block">
 
     <!-- LEADERBOARD: START-->
-    <div class="container py-5">
+    <div class="container py-4 py-lg-5">
         <h2 class="text-center"><strong>LEADERBOARD</strong></h2>
         <div class="row justify-content-center">
             <div id="spinner" class="spinner-border" role="status">
